@@ -7,14 +7,13 @@ import de.medizininformatikinitiative.torch.model.fhir.QueryParams;
 import de.medizininformatikinitiative.torch.model.mapping.DseMappingTreeBase;
 
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static de.medizininformatikinitiative.torch.model.fhir.QueryParams.EMPTY;
+import static de.medizininformatikinitiative.torch.model.fhir.QueryParams.stringValue;
+import static java.util.Objects.requireNonNull;
 
 @JsonIgnoreProperties(ignoreUnknown = true)
 public record AttributeGroup(
-
         @JsonProperty(required = true)
         String groupReference,
         @JsonProperty(required = true)
@@ -22,51 +21,31 @@ public record AttributeGroup(
         List<Filter> filter
 ) {
 
-
     // Canonical Constructor with validation for filter duplicates and UUID generation
     public AttributeGroup {
-        if (containsDuplicateDateType(filter)) {
+        requireNonNull(groupReference);
+        attributes = List.copyOf(attributes);
+        if (containsDuplicateDateFilters(filter)) {
             throw new IllegalArgumentException("Duplicate date type filter found");
         }
+        filter = List.copyOf(filter);
     }
 
-    public boolean hasFilter() {
-        return filter != null && !filter.isEmpty();
-    }
-
-    // Helper method to check for duplicate 'date' type filters
-    private static boolean containsDuplicateDateType(List<Filter> filterList) {
-        boolean dateTypeFound = false;
-        for (Filter filter : filterList) {
-            if ("date".equals(filter.type())) {
-                if (dateTypeFound) {
-                    return true;  // Duplicate found
-                }
-                dateTypeFound = true;
-            }
-        }
-        return false;
+    private static boolean containsDuplicateDateFilters(List<Filter> filters) {
+        return filters.stream().filter(filter -> "date".equals(filter.type())).count() > 1;
     }
 
     public List<Query> queries(DseMappingTreeBase mappingTreeBase) {
-        List<QueryParams> paramsList = queryParams(mappingTreeBase);
-        return paramsList.stream()
-                .map(x -> new Query(resourceType(), x))
-                .collect(Collectors.toList());
+        return queryParams(mappingTreeBase).stream()
+                .map(params -> Query.of(resourceType(), params))
+                .toList();
     }
 
-    public List<QueryParams> queryParams(DseMappingTreeBase mappingTreeBase) {
-
-        List<QueryParams> paramsList = filter.stream()
+    private List<QueryParams> queryParams(DseMappingTreeBase mappingTreeBase) {
+        List<QueryParams> codeParams = filter.stream()
                 .filter(f -> "token".equals(f.type()))
-                .map(f -> f.codeFilter(mappingTreeBase))
-                .filter(Objects::nonNull)
-                .flatMap(code -> code.params().stream())
-                .map(param -> {
-                    QueryParams individualCodeParams = new QueryParams(List.of(param));
-                    return individualCodeParams;
-                })
-                .collect(Collectors.toList());
+                .flatMap(f -> f.codeFilter(mappingTreeBase).split())
+                .toList();
 
         QueryParams dateParams = filter.stream()
                 .filter(f -> "date".equals(f.type()))
@@ -74,23 +53,17 @@ public record AttributeGroup(
                 .map(Filter::dateFilter)
                 .orElse(EMPTY);
 
-        if (paramsList.isEmpty()) {
+        if (codeParams.isEmpty()) {
             // Add a single QueryParams with the date filter (if available) and profile parameter
-            QueryParams defaultParams = EMPTY
-                    .appendParams(dateParams)
-                    .appendParam("_profile", QueryParams.stringValue(groupReference));
-            paramsList.add(defaultParams);
+            return List.of(dateParams.appendParam("_profile", stringValue(groupReference)));
         } else {
-            paramsList = paramsList.stream()
-                    .map(p -> p.appendParams(dateParams))
-                    .map(p -> p.appendParam("_profile", QueryParams.stringValue(groupReference)))
-                    .collect(Collectors.toList());
+            return codeParams.stream()
+                    .map(p -> p.appendParams(dateParams).appendParam("_profile", stringValue(groupReference)))
+                    .toList();
         }
-        return paramsList;
     }
 
-
-    public String resourceType() {
+    private String resourceType() {
         return attributes.getFirst().attributeRef().split("\\.")[0];
     }
 
